# WS-PluginManager

./: CHANGELOG.md  README.md  RELEASE-v1.0.1.md  install.sh
installer/linux-x86_64/: install.sh
installer/macos-universal/: install.sh
installer/windows-x86_64/: install.bat  install.ps1
src/: CMakeLists.txt  glibc_compat.c  plugin_actions.c  plugin_actions.h  plugin_dialog.cpp  plugin_dialog.h  plugin_manager.c  plugin_manager.h  plugin_profiles.c  plugin_profiles.h  plugin_scanner.c  plugin_scanner.h  ui_bridge.cpp  ui_bridge.h
